# snakepyt

./: .cruft.json  LICENCE  README.md  mkdocs.yml  pyproject.toml
docs/: api_docs.md
